--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                                     desees promocionar al mundo lo hagas de una manera ¡espectacular!</p>
                             </div>
                         </div>
+
                         <div id="lottie_presentation">
                             <lottie-player src="./resourses/img/classic/web-design.json" background="transparent"
                                 speed="1.5" loop autoplay></lottie-player>
@@ -482,10 +483,10 @@
 
                 <div class="space-b"></div>
 
-                <div id="portal_container2">
+                <div id="portal_container">
                 
                         <div id="popup_forUp">
-                            <h2 id="text_container2">¿Ya pasaste por nuestros nuevos servicios?, ¿No?, no te preocupes, te llevamos.
+                            <h2 id="text_container">¿Ya pasaste por nuestros nuevos servicios?, ¿No?, no te preocupes, te llevamos.
                                 <br><br> <u>Entra en el portal</u>
                                 <br><br>Cuando llegues recuerda seguir subiendo ☺
                             </h2>
